--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon app.js"
     },
     "dependencies": {
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "pg": "^8.10.0"
     },
